# hourllava

./: .gitignore  README.md  pyproject.toml  requirements.txt
experiments/: llava_ov_si.yaml  llavavideo_mi.yaml  llavavideo_si.yaml  llavavideo_text.yaml  llavavideo_video.yaml  videomarathon.yaml
experiments/streaming/: hourllava_s1.yaml  hourllava_s2.yaml  hourllava_s3.yaml
hourllava/dataset/: __init__.py  collator.py  lazy_supervised_dataset.py  preprocess.py  streaming_supervised_dataset.py
hourllava/dataset/sampler/: __init__.py  length_grouped_sampler.py
hourllava/model/: __init__.py  builder.py  hour_llava_arch.py  llava_arch.py  utils.py
hourllava/model/language_model/: hour_llava_qwen.py  llava_llama.py  llava_qwen.py
hourllava/model/multimodal_encoder/: builder.py  clip_encoder.py  hf_vision.py  open_clip_encoder.py  siglip_encoder.py
hourllava/model/multimodal_resampler/: builder.py  memaug.py
hourllava/train/: llava_trainer.py  train.py
hourllava/util/: __init__.py  arguments.py  conversation.py  misc.py  mm_utils.py
scripts/deepspeed/: zero2.json  zero3.json
scripts/embedding/: hourllava_qwen25_3b_emb.sh  hourllava_qwen2_7b_emb.sh  videomarathon_emb.py
scripts/hourllava/qwen25_3b/: s1_image_language_pretraining.sh  s2_video_language_adaptation.sh  s3_video_instruction_tuning.sh
scripts/hourllava/qwen2_7b/: s1_image_language_pretraining.sh  s2_video_language_adaptation.sh  s3_video_instruction_tuning.sh
scripts/sharding/: merge_shards.py  sharding_multi_image_data.py  sharding_single_image_data.py  sharding_video_str_data.py  sharding_videofeat_str_data.py
scripts/sharding/scripts/: merge_hourllava_s3.sh  sharding_llava_ov_si_onlyimg.sh  sharding_llavavideo_mi.sh  sharding_llavavideo_si.sh  sharding_llavavideo_text.sh  sharding_llavavideo_video.sh  (+1 more)
(+3 files in other folders)
